<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="516dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contact_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/android_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/number1"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/number1_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/number1_contact" />

            <TextView
                android:id="@+id/number2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/number2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/number2_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/number2_contact" />

            <EditText
                android:id="@+id/number1_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/autofill"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <EditText
                android:id="@+id/number2_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/autofill"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number1_contact" />

            <TextView
                android:id="@+id/email1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.4"
                android:text="@string/e_mail1"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/email1_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email1_contact" />

            <TextView
                android:id="@+id/email2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/e_mail2"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/email2_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email2_contact" />

            <EditText
                android:id="@+id/email1_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.6"
                android:autofillHints="@string/autofill"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number2_contact" />

            <EditText
                android:id="@+id/email2_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/autofill"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email1_contact" />

            <TextView
                android:id="@+id/birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/birthday_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/birthday_contact" />

            <TextView
                android:id="@+id/birthday_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="@+id/email2_contact"
                app:layout_constraintStart_toStartOf="@+id/email2_contact"
                app:layout_constraintTop_toBottomOf="@+id/email2_contact" />

            <Button
                android:id="@+id/birthday_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="@+id/birthday_contact"
                app:layout_constraintStart_toStartOf="@+id/birthday_contact"
                app:layout_constraintTop_toBottomOf="@+id/birthday_contact" />

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="address:"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/address_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/address_contact" />

            <TextView
                android:id="@+id/address_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="@+id/birthday_contact"
                app:layout_constraintStart_toStartOf="@+id/birthday_contact"
                app:layout_constraintTop_toBottomOf="@+id/birthday_button" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar_details"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>
</ScrollView>